--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/yang-chenhao/ych-ui/issues"
   },
-  "homepage": "https://github.com/yang-chenhao/ych-ui#readme"
+  "homepage": "https://github.com/yang-chenhao/ych-ui#readme",
+  "devDependencies": {
+    "awesome-typescript-loader": "^5.2.1",
+    "typescript": "^3.5.2",
+    "webpack": "^4.35.2",
+    "webpack-cli": "^3.3.5"
+  }
 }
