--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "typescript": "^3.5.2",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5"
+  },
+  "dependencies": {
+    "webpack-dev-server": "^3.7.2"
   }
 }
