--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,37 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
-        "noImplicitAny": true,
-        "removeComments": true,
-        "preserveConstEnums": true,
-        "sourceMap": true
+      "outDir": "dist",
+      "declaration": true,
+      "baseUrl": ".",
+      "module": "esnext",
+      "target": "es5",
+      "lib": ["es6", "dom"],
+      "sourceMap": true,
+      "jsx": "react",
+      "moduleResolution": "node",
+      "rootDir": ".",
+      "forceConsistentCasingInFileNames": true,
+      "noImplicitReturns": true,
+      "noImplicitThis": true,
+      "noImplicitAny": true,
+      "importHelpers": true,
+      "strictNullChecks": true,
+      // "suppressImplicitAnyIndexErrors": true,
+      // https://github.com/Microsoft/TypeScript/issues/28762#issuecomment-443406607
+      "allowSyntheticDefaultImports": true,
+      "noUnusedLocals": true
     },
-    "files": [
-        "core.ts",
-        "sys.ts",
-        "types.ts",
-        "scanner.ts",
-        "parser.ts",
-        "utilities.ts",
-        "binder.ts",
-        "checker.ts",
-        "emitter.ts",
-        "program.ts",
-        "commandLineParser.ts",
-        "tsc.ts",
-        "diagnosticInformationMap.generated.ts"
+    "include": [
+    ],
+    "exclude": [
+      "node_modules",
+      "build",
+      "dist",
+      "scripts",
+      "acceptance-tests",
+      "webpack",
+      "jest",
+      "src/setupTests.ts",
+      "*.js"
     ]
-}
+  }
