--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cross-env": "^5.2.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
+    "svg-sprite-loader": "^4.1.6",
     "ts-jest": "^24.0.2",
     "typescript": "^3.5.2",
     "webpack": "^4.35.2",
