--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   },
   "homepage": "https://github.com/yang-chenhao/ych-ui#readme",
   "devDependencies": {
+    "@babel/core": "^7.5.4",
     "@types/jest": "^24.0.15",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
     "@types/react-test-renderer": "^16.8.2",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-jest": "^24.8.0",
+    "babel-preset-react-app": "^9.0.0",
     "cross-env": "^5.2.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
