--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "babel-jest": "^24.8.0",
     "babel-preset-react-app": "^9.0.0",
     "cross-env": "^5.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
+    "react-test-renderer": "^16.8.6",
     "svg-sprite-loader": "^4.1.6",
     "ts-jest": "^24.0.2",
     "typescript": "^3.5.2",
