--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
+    "jest-junit": "^6.4.0",
     "react-test-renderer": "^16.8.6",
     "svg-sprite-loader": "^4.1.6",
     "ts-jest": "^24.0.2",
