--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jest": "^24.8.0",
     "jest-junit": "^6.4.0",
     "react-test-renderer": "^16.8.6",
+    "style-loader": "^0.23.1",
     "svg-sprite-loader": "^4.1.6",
     "ts-jest": "^24.0.2",
     "typescript": "^3.5.2",
