--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "babel-jest": "^24.8.0",
     "babel-preset-react-app": "^9.0.0",
     "cross-env": "^5.2.0",
+    "css-loader": "^3.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
     "jest-junit": "^6.4.0",
     "react-test-renderer": "^16.8.6",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "svg-sprite-loader": "^4.1.6",
     "ts-jest": "^24.0.2",
