--- a/package.json
+++ b/package.json
@@ -22,30 +22,33 @@
   },
   "homepage": "https://github.com/yang-chenhao/ych-ui#readme",
   "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@types/jest": "^24.0.15",
-    "@types/react": "^16.8.23",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-test-renderer": "^16.8.2",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
+    "@types/jest": "^24.0.9",
+    "@types/react": "^16.8.7",
+    "@types/react-dom": "^16.8.2",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/react-test-renderer": "^16.8.1",
     "awesome-typescript-loader": "^5.2.1",
-    "babel-jest": "^24.8.0",
-    "babel-preset-react-app": "^9.0.0",
+    "babel-jest": "^24.3.1",
+    "babel-preset-react-app": "^7.0.2",
     "cross-env": "^5.2.0",
-    "css-loader": "^3.0.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
+    "css-loader": "^2.1.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^24.8.0",
-    "jest-junit": "^6.4.0",
-    "react-test-renderer": "^16.8.6",
+    "jest": "^24.3.1",
+    "jest-junit": "^6.3.0",
+    "node-sass": "^4.11.0",
+    "react-test-renderer": "^16.8.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "svg-sprite-loader": "^4.1.6",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.5.2",
-    "webpack": "^4.35.2",
-    "webpack-cli": "^3.3.5",
-    "webpack-dev-server": "^3.7.2"
+    "svg-sprite-loader": "^4.1.3",
+    "ts-jest": "^24.0.0",
+    "typescript": "^3.3.3333",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
     "react": "^16.8.6",
