--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ych-ui",
-  "version": "1.0.0",
+  "name": "ych999-ui",
+  "version": "0.0.1",
   "description": "",
   "main": "dist/lib/index",
   "types": "dist/lib/index",
@@ -17,6 +17,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "files": ["/dist"],
   "bugs": {
     "url": "https://github.com/yang-chenhao/ych-ui/issues"
   },
