--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ych999-ui",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "dist/lib/index",
   "types": "dist/lib/index",
@@ -17,7 +17,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "files": ["/dist"],
+  "files": [
+    "/dist"
+  ],
   "bugs": {
     "url": "https://github.com/yang-chenhao/ych-ui/issues"
   },
