--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
+    "file-loader": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.3.1",
     "jest-junit": "^6.3.0",
